--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-     <header>
+     <header class="flex">
         <picture class="header__logo animate__animated animate__wobble">
             <img class="header__img" src="./img/logo.svg" alt="Logo de sairov">
         </picture>
