Se agregaron las secciones de cards e info

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <!-- Inicio Header -->
      <header class="flex">
         <picture class="header__logo animate__animated animate__wobble">
             <img class="header__img" src="./img/logo.svg" alt="Logo de sairov">
@@ -31,7 +32,52 @@
             </ul>
         </nav>
      </header>
+     <!-- Fin Header -->
      <main class="container">
+         <section id="cards" class="cards">
+             <article class="box">
+                 <picture class="box__img">
+                     <img src="./img/zorro.jpg" alt="Un zorro rojo en la nieve">
+                 </picture>
+                 <div class="box__info">
+                     <h2 class="box__title">Zorro Rojo</h2>
+                     <h3 class="box__subtitle">Vulpes Vulpes</h3>
+                     <p class="box__text">El zorro común o zorro rojo, también llamado raposo o raboso, es una especie de mamífero de la familia cánidos, de distribución holártica, aunque también fue introducido en Australia en el siglo XIX.</p>
+                 </div>
+             </article>
+             <article class="box">
+                 <picture class="box__img">
+                     <img src="./img/perro.jpg" alt="Un hermoso perro gris, parece un weimaraner">
+                 </picture>
+                 <div class="box__info">
+                     <h2 class="box__title">Weimaraner</h2>
+                     <h3 class="box__subtitle">El mejor amigo del hombre</h3>
+                     <p class="box__text">El braco de Weimar es un perro de caza especialmente dotado co mo perro cobrador. Su pelaje, corto y espeso, le protege muy bien de la humedad; esto le permite ser un cazador eficaz en terrenos pantanosos.</p>
+                 </div>
+             </article>
+             <article class="box">
+                 <picture class="box__img">
+                     <img src="./img/guacamayo.jpg" alt="Un hermoso ejemplar de guacamayo">
+                 </picture>
+                 <div class="box__info">
+                     <h2 class="box__title">Guacamayo</h2>
+                     <h3 class="box__subtitle">Ara</h3>
+                     <p class="box__text">Los guacamayos son aves del orden Psittaciformes y de la familia Psittacidae, muy llamativas por el colorido de su plumaje. También conocidos como Mery en algunos círculos</p>
+                 </div>
+             </article>
+         </section>
+         <section id="info" class="info">
+            <picture class="info__img">
+                <img src="./img/tigre.jpg" alt="">
+            </picture>
+            <article class="info__box">
+                <h2 class="info__title">El Mundo Animal</h2>
+                <p class="info__description">En la clasificación científica de los seres vivos, los animales (Animalia) o metazoos (Metazoa) constituyen un reino que reúne un amplio grupo de organismos que son eucariotas, heterótrofos, pluricelulares y tisulares (excepto los poríferos).</p>
+                <a class="info__link" href="">Ver más 
+                    <span class="iconify" data-icon="bytesize:arrow-right"></span>
+                </a>
+            </article>
+         </section>
          <section id="gallery" class="gallery">
             <picture class="gallery__img">
                 <img src="./img/Mask-Group-1.jpg" alt="">
@@ -48,7 +94,7 @@
             <picture class="gallery__img">
                 <img src="./img/Mask-Group-4.jpg" alt="">
             </picture>
-            <picture class="gallery__img" data-aos="zoom-in-down">
+            <picture class="gallery__img">
                 <img src="./img/Mask-Group-5.jpg" alt="">
             </picture>
          </section>
