--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <!-- Inicio Header -->
-     <header class="flex">
+     <!-- <header class="flex">
         <picture class="header__logo animate__animated animate__wobble">
             <img class="header__img" src="./img/logo.svg" alt="Logo de sairov">
         </picture>
@@ -30,12 +32,36 @@
                     <a class="menu__link" href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
-        </nav>
-     </header>
+        </nav> -->
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+     <!-- </header> -->
      <!-- Fin Header -->
      <main class="container">
-         <section id="cards" class="cards">
-             <article class="box">
+         <section id="cards" class="cards row justify-content-center">
+             <article class="box col-sm-6 col-md-4">
                  <picture class="box__img">
                      <img src="./img/zorro.jpg" alt="Un zorro rojo en la nieve">
                  </picture>
@@ -45,7 +71,7 @@
                      <p class="box__text">El zorro común o zorro rojo, también llamado raposo o raboso, es una especie de mamífero de la familia cánidos, de distribución holártica, aunque también fue introducido en Australia en el siglo XIX.</p>
                  </div>
              </article>
-             <article class="box">
+             <article class="box col-sm-6 col-md-4">
                  <picture class="box__img">
                      <img src="./img/perro.jpg" alt="Un hermoso perro gris, parece un weimaraner">
                  </picture>
@@ -55,7 +81,7 @@
                      <p class="box__text">El braco de Weimar es un perro de caza especialmente dotado co mo perro cobrador. Su pelaje, corto y espeso, le protege muy bien de la humedad; esto le permite ser un cazador eficaz en terrenos pantanosos.</p>
                  </div>
              </article>
-             <article class="box">
+             <article class="box col-sm-8 col-md-4">
                  <picture class="box__img">
                      <img src="./img/guacamayo.jpg" alt="Un hermoso ejemplar de guacamayo">
                  </picture>
@@ -66,6 +92,27 @@
                  </div>
              </article>
          </section>
+         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/zorro.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/perro.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/guacamayo.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
          <section id="info" class="info">
             <picture class="info__img">
                 <img src="./img/tigre.jpg" alt="">
@@ -99,6 +146,24 @@
             </picture>
          </section>
      </main>
+     <form class="container w-50">
+        <article class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </article>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-dark">Submit</button>
+      </form>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+     <!-- <script src="./js/bootstrap.min.js"></script> -->
      <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
      <script>
